cpp/reverse-string/run-tests-cpp.txt
Running automated test file(s):


===============================================================================

Running: make clean
rm -rf ./build

real	0m0.014s
user	0m0.002s
sys	0m0.012s

===============================================================================

export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"

===============================================================================

Running: make coverage | ansifilter
rm -rf ./build
mkdir -pv ./build
mkdir: created directory './build'

cd ./build; export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"; cmake -DEXERCISM_RUN_ALL_TESTS=1 -DCMAKE_EXPORT_COMPILE_COMMANDS=1 -G 'Unix Makefiles' ../; if make; then printf "\n=== All Tests Passed ===\n"; else printf "\n=== Test Failure ===\n"; false; fi
-- The CXX compiler identification is GNU 10.2.1
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Configuring done
-- Generating done
-- Build files have been written to: /home/vpayno/git_vpayno/exercism-workspace/cpp/reverse-string/build
make[1]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/reverse-string/build'
make[2]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/reverse-string/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/reverse-string/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/reverse-string/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/reverse-string/build'
[ 25%] Building CXX object CMakeFiles/reverse-string.dir/reverse_string_test.cpp.o
[ 50%] Building CXX object CMakeFiles/reverse-string.dir/reverse_string.cpp.o
[ 75%] Building CXX object CMakeFiles/reverse-string.dir/test/tests-main.cpp.o
[100%] Linking CXX executable reverse-string
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/reverse-string/build'
[100%] Built target reverse-string
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/reverse-string/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/reverse-string/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/reverse-string/build'
===============================================================================
All tests passed (5 assertions in 5 test cases)

make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/reverse-string/build'
[100%] Built target test_reverse-string
make[2]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/reverse-string/build'
make[1]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/reverse-string/build'

=== All Tests Passed ===

find . -regextype posix-egrep -regex "^.*(tests-main|CompilerId).*[.](gcda|gcno)$" -print -delete
./build/CMakeFiles/3.22.2/CompilerIdCXX/CMakeCXXCompilerId.gcno
./build/CMakeFiles/reverse-string.dir/test/tests-main.cpp.gcno
./build/CMakeFiles/reverse-string.dir/test/tests-main.cpp.gcda

find . -regextype posix-egrep -regex "^.*[.](gcda|gcno)22390"

gcovr --print-summary
------------------------------------------------------------------------------
                           GCC Code Coverage Report
Directory: .
------------------------------------------------------------------------------
File                                       Lines    Exec  Cover   Missing
------------------------------------------------------------------------------
reverse_string.cpp                             6       6   100%   
reverse_string_test.cpp                       15      15   100%   
test/catch.hpp                                34      27    79%   1642-1643,1710-1711,2227,2229,2560
------------------------------------------------------------------------------
TOTAL                                         55      48    87%
------------------------------------------------------------------------------
lines: 87.3% (48 out of 55)
branches: 37.7% (40 out of 106)

real	0m10.027s
user	0m9.203s
sys	0m0.814s

===============================================================================

cmake-format --in-place CMakeLists.txt

real	0m0.154s
user	0m0.112s
sys	0m0.042s

===============================================================================

cmake-lint CMakeLists.txt
CMakeLists.txt
==============
CMakeLists.txt:15,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:17,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:61,70: [C0307] Bad indentation:
                                               )
  ^----BodyNode: 1:0->IfBlockNode: 59:0->BodyNode: 59:11->StatementNode: 60:2->TreeNode: 61:70

CMakeLists.txt:66,02: [C0113] Missing COMMENT in statement which allows it

Summary
=======
files scanned: 1
found lint:
  Convention: 4


real	0m0.165s
user	0m0.120s
sys	0m0.046s

===============================================================================

Running: clang-format-16 -style=file -i ./reverse_string.cpp ./reverse_string_test.cpp ./reverse_string.h

real	0m0.020s
user	0m0.013s
sys	0m0.007s

===============================================================================

Running: ../../.github/citools/cpp/clang-check
clang-check-16 --analyze ./reverse_string.cpp ./reverse_string_test.cpp ./reverse_string.h
error: argument unused during compilation: '-stdlib=libstdc++' [-Werror,-Wunused-command-line-argument]
error: invalid argument '-std=c++17' not allowed with 'C'
/home/vpayno/git_vpayno/exercism-workspace/cpp/reverse-string/reverse_string.h:6:10: fatal error: 'iterator' file not found
#include <iterator>
         ^~~~~~~~~~
1 error generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/reverse-string/reverse_string.h.

real	0m0.534s
user	0m0.495s
sys	0m0.039s


real	0m0.536s
user	0m0.497s
sys	0m0.039s

===============================================================================

Running: ../../.github/citools/cpp/clang-tidy | head -n 100
12523 warnings generated.
47957 warnings generated.
47957 warnings and 3 errors generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/reverse-string/reverse_string.h.
Suppressed 47960 warnings (47955 in non-user code, 5 NOLINT).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
Found compiler error(s).

real	0m6.967s
user	0m6.889s
sys	0m0.077s
Running: clang-tidy-16 ./reverse_string.cpp ./reverse_string_test.cpp ./reverse_string.h
error: invalid argument '-std=c++17' not allowed with 'C' [clang-diagnostic-error]
error: argument unused during compilation: '-stdlib=libstdc++' [clang-diagnostic-unused-command-line-argument]
/home/vpayno/git_vpayno/exercism-workspace/cpp/reverse-string/reverse_string.h:6:10: error: 'iterator' file not found [clang-diagnostic-error]
#include <iterator>
         ^~~~~~~~~~
/home/vpayno/git_vpayno/exercism-workspace/cpp/reverse-string/reverse_string_test.cpp:9:13: warning: the 'empty' method should be used to check for emptiness instead of comparing to an empty object [readability-container-size-empty]
    REQUIRE("" == reverse_string::reverse_string(""));
            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            reverse_string::reverse_string("").empty()
/home/vpayno/git_vpayno/exercism-workspace/cpp/reverse-string/test/catch.hpp:17637:90: note: expanded from macro 'REQUIRE'
#define REQUIRE( ... ) INTERNAL_CATCH_TEST( "REQUIRE", Catch::ResultDisposition::Normal, __VA_ARGS__  )
                                                                                         ^
/home/vpayno/git_vpayno/exercism-workspace/cpp/reverse-string/test/catch.hpp:2703:40: note: expanded from macro 'INTERNAL_CATCH_TEST'
        CATCH_INTERNAL_IGNORE_BUT_WARN(__VA_ARGS__); \
                                       ^
/home/vpayno/git_vpayno/exercism-workspace/cpp/reverse-string/test/catch.hpp:165:76: note: expanded from macro 'CATCH_INTERNAL_IGNORE_BUT_WARN'
#    define CATCH_INTERNAL_IGNORE_BUT_WARN(...) (void)__builtin_constant_p(__VA_ARGS__) /* NOLINT(cppcoreguidelines-pro-type-vararg, hicpp-vararg) */
                                                                           ^
/usr/lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/bits/basic_string.h:1002:7: note: method 'basic_string<char>'::empty() defined here
      empty() const _GLIBCXX_NOEXCEPT
      ^


real	0m6.970s
user	0m6.891s
sys	0m0.080s

===============================================================================

